# xbin

./: .gitignore  README.md  docker-compose.yml  example_plugin.py  pyproject.toml
core/orchestrator/: Dockerfile
docs/: grpc_schemas.md  sdk_reference.md
examples/: sample.elf
plugins/cfg_generation/: README.md
plugins/cfg_generation/angr/: Dockerfile  angr_worker.py
plugins/cfg_generation/radare/: Dockerfile  radare_worker.py
plugins/function_boundary/angr/: Dockerfile
plugins/function_boundary/binja/: .xbin-prebuilt  Dockerfile  binja_boundary_worker.py  build.conf  build.sh
plugins/function_boundary/boundary_ranker/: Dockerfile
plugins/function_boundary/boundary_validator/: Dockerfile  boundary_validator.py
plugins/function_boundary/radare/: Dockerfile
plugins/symbol_matching/equation_recovery/: .xbin-prebuilt  Dockerfile  build.conf  build.sh  equation_recovery_worker.py  selftest_in_image.py
plugins/symbol_matching/equation_recovery/uploads/: func_9953_arm32_cse_c_O1_test.elf  func_9953_arm32_cse_c_O1_test.iopairs.txt
plugins/symbol_matching/flirt/: Dockerfile  flirt_worker.py
plugins/symbol_matching/morpheus/: .xbin-prebuilt  Dockerfile  build.conf  build.sh  morpheus_worker.py
src/xbin/: __init__.py  sdk.py
src/xbin_orchestrator/: main.py  orchestrator.proto  orchestrator_pb2.py  orchestrator_pb2_grpc.py
